--- a/QThreadTest.vcxproj
+++ b/QThreadTest.vcxproj
@@ -60,11 +60,15 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="STLLoaderThread.cpp" />
     <QtRcc Include="QThreadTest.qrc" />
     <QtUic Include="QThreadTest.ui" />
     <QtMoc Include="QThreadTest.h" />
     <ClCompile Include="QThreadTest.cpp" />
     <ClCompile Include="main.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <QtMoc Include="STLLoaderThread.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Condition="Exists('$(QtMsBuild)\qt.targets')">
